<resources>
    <string name="app_name">FeNi Level</string>

    <string name="former_metal_level">Me level</string>
    <string name="charge_loaded">Charge</string>
    <string name="ni_in_charge">Ni in charge</string>
    <string name="metal_mass">Me mass</string>
    <string name="ni_in_metal">Ni in Me</string>

    <string name="bottom_area">Bottom area, m<sup>2</sup></string>
    <string name="ni_extraction">Ni extraction, %</string>
    <string name="feni_density">FeNi density, t/m<sup>3</sup></string>

    <string name="action_additional_settings">Options</string>

    <string name="bottom_area_default_value" translatable="false">197.5</string>
    <string name="ni_extraction_default_value" translatable="false">91.5</string>
    <string name="feni_density_default_value" translatable="false">7.65</string>


</resources>
