<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:title="@string/bottom_area"
            android:key="bottom_area"
            android:summary="Furnace bottom area"
            android:inputType="numberDecimal"
            android:defaultValue="197.5"/>

    <EditTextPreference
            android:title="@string/ni_extraction"
            android:key="ni_extraction"
            android:summary="Ni extraction to metall"
            android:inputType="numberDecimal"
            android:defaultValue="91.5"/>

    <EditTextPreference
            android:title="@string/feni_density"
            android:key="feni_density"
            android:summary="FeNi density"
            android:inputType="numberDecimal"
            android:defaultValue="7.65"/>

</PreferenceScreen>